
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int device_t ;


 int ACPI_ID_PROBE (int ,int ,int ,int *) ;
 int ENXIO ;
 scalar_t__ acpi_disabled (char*) ;
 int aibs_hids ;
 int device_get_parent (int ) ;
 int device_set_desc (int ,char*) ;

__attribute__((used)) static int
aibs_probe(device_t dev)
{
 int rv;

 if (acpi_disabled("aibs"))
  return (ENXIO);
 rv = ACPI_ID_PROBE(device_get_parent(dev), dev, aibs_hids, ((void*)0));
 if (rv <= 0 )
  device_set_desc(dev, "ASUSTeK AI Booster (ACPI ASOC ATK0110)");
 return (rv);
}
